add docker support

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
-PGCONNSTRING=postgresql://username:password@localhost/database_name
+PGCONNSTRING=postgresql://yes:changeme@db/db
+POSTGRES_USER=yes
+POSTGRES_PASSWORD=changeme
+POSTGRES_DB=db
