--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -1,11 +1,11 @@
 services:
-
   backend:
     build: .
     restart: always
-    expose:  # new
+    expose:
       - 80
     environment:
+      - LOG_LEVEL=warning
       - PGCONNSTRING=${PGCONNSTRING}
     depends_on:
       - db
@@ -15,17 +15,11 @@ services:
     labels:
       - traefik.enable=true
       - traefik.http.services.app.loadbalancer.server.port=80
-      - traefik.http.routers.app-http.entrypoints=http
-      - traefik.http.routers.app-http.rule=Host(`api.donorojo.id`)
       - traefik.docker.network=traefik-public
       - traefik.http.routers.app-https.entrypoints=https
       - traefik.http.routers.app-https.rule=Host(`api.visitdonorojo.id`)
       - traefik.http.routers.app-https.tls=true
       - traefik.http.routers.app-https.tls.certresolver=letsencrypt
-      - traefik.http.middlewares.https-redirect.redirectscheme.scheme=https
-      - traefik.http.middlewares.https-redirect.redirectscheme.permanent=true
-      - traefik.http.routers.app-http.middlewares=https-redirect
-      - traefik.http.routers.app-https.middlewares=admin-auth
   db:
     image: postgres:13-alpine
     expose:
@@ -42,4 +36,3 @@ networks:
     external: true
   internal:
     external: false
-
