--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -16,7 +16,7 @@ services:
       - traefik.enable=true
       - traefik.http.services.app.loadbalancer.server.port=80
       - traefik.docker.network=traefik-public
-      - traefik.http.routers.app-https.entrypoints=https
+      - traefik.http.routers.app-https.entrypoints=websecure
       - traefik.http.routers.app-https.rule=Host(`api.visitdonorojo.id`)
       - traefik.http.routers.app-https.tls=true
       - traefik.http.routers.app-https.tls.certresolver=letsencrypt
